packages/svelte/tests/validator/samples/rune-invalid-spread-derived-by/input.svelte
<script>
	const args = [0];
	const count = $derived.by(...args);
</script>