packages/svelte/tests/compiler-errors/samples/runes-wrong-derived-placement/main.svelte
<script>
	$derived(1);
</script>
